[tool.poetry]
name = "netsgiro"
version = "1.3.0"
description = "File parsers for Nets AvtaleGiro and OCR Giro"
homepage = 'https://pypi.org/project/netsgiro/'
repository = 'https://github.com/otovo/python-netsgiro'
authors = ["Otovo AS <jodal+netsgiro@otovo.com>"]
license = 'Apache License, Version 2.0'
readme = 'README.rst'
keywords = ['avtalegiro', 'ocr', 'giro']
packages = [{ include = 'netsgiro' }]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.urls]
"Docs" = "https://netsgiro.readthedocs.io/"
"Changelog" = "https://netsgiro.readthedocs.io/en/latest/changelog/"

[tool.poetry.dependencies]
python = ">=3.7"
attrs = ">=17.4"

[tool.poetry.extras]
# Holidays can be installed to enable holiday-adjustments
# in minimum due-date validation.
holidays = ['holidays']

[tool.poetry.dev-dependencies]
check-manifest = "*"
hypothesis = "*"
pydocstyle = "*"
pytest = "*"
pytest-xdist = "*"
Sphinx = "*"
sphinx-rtd-theme = "*"
pre-commit = "^2.17.0"
time-machine = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
quiet = true
line-length = 80
skip-string-normalization = true
preview = true

[tool.isort]
profile = "black"
line_length = 80

[tool.coverage.run]
source = ['netsgiro']
omit = []
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
]
